modules/networking/internet_gateway.tf
#--- networking/internet_gateway.tf ----


resource "aws_internet_gateway" "pbl-igw" {
  vpc_id = aws_vpc.main.id

  tags = merge(
    var.tags,
    {
      Name = format("%s-%s!", aws_vpc.main.id, "pbl-igw")
    },
  )
}
